# ai-video-autocut

./: Cargo.toml  README.md  ai-video-autocut.toml  autocut-tui.toml  deploy.sh
docs/screenshots/: 01-files-with-preview.txt  02-subtitle-editor.txt  03-help-popup.txt  04-cut-confirm.txt
src/: api.rs  app.rs  config.rs  keys.rs  main.rs  ui.rs  util.rs
