[package]
name = "ai-video-autocut"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
nickel-lang-core = { version = "0.12", default-features = false }
unicode-width = "0.2"

[profile.release]
lto = true
strip = true
opt-level = "z"
